# MyGameServer

./: CMakeLists.txt  MyGameServer.sln  MyGameServer.vcxproj  MyGameServer.vcxproj.filters
MyClient/: CMakeLists.txt  MyClient.cpp  MyClient.h  MyClient.vcxproj  MyClient.vcxproj.filters
MyGameServer/: CMakeLists.txt  MyGameServer.cpp  MyGameServer.h  MyGameServer.vcxproj  MyGameServer.vcxproj.filters
MyGameServer/game/: logicmodule.cpp  logicmodule.hpp  logicnetworkcallback.cpp  logicnetworkcallback.hpp  world.cpp  world.hpp
MyGameServer/game/module/: player.cpp  player.hpp  playermanager.cpp  playermanager.hpp  playermodulebase.cpp  playermodulebase.hpp
include/: version.txt
include/libhv/: hconfig.h
lib/Release/: hv.exp  hv.lib  jsonrpc_client.exp  jsonrpc_client.lib  jsonrpc_server.exp
lib/libhv/: hv.exp  hv.lib  jsonrpc_client.exp  jsonrpc_server.exp  jsonrpc_server.lib
servercommon/: common_function.cpp  common_function.hpp  gamedef.hpp  imodule.cpp  imodule.hpp  module_def.hpp  module_manager.cpp  module_manager.hpp  playerdef.hpp  timehelper.hpp
servercommon/asynctask/: asynctaskmanager.cpp  asynctaskmanager.hpp  iasynctask.hpp
servercommon/businessmodule/: businessmodule.cpp  businessmodule.hpp
servercommon/mempool/: clmempool.cpp  clmempool.hpp  mempool.cpp  mempool.hpp  serverclmempool.cpp  tsmempool.cpp  tsmempool.hpp
servercommon/networkmodule/: inetworkcallback.hpp  inetworkmodule.hpp  networkmodule.cpp  networkmodule.hpp  tcpserver.cpp  tcpserver.hpp
servercommon/protobuf/: generate_proto.bat  protobufmanager.cpp  protobufmanager.hpp
(+57 files in other folders)
